<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_page"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/page_horizontal_margin"
        android:paddingTop="@dimen/page_vertical_margin"
        android:paddingEnd="@dimen/page_horizontal_margin"
        android:paddingBottom="@dimen/page_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/token"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/token_label"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:minHeight="@dimen/touch_target"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_2"
                android:layout_marginStart="@dimen/space_2"
                android:enabled="false"
                android:minHeight="@dimen/touch_target"
                android:text="@string/action_sign_in" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/touch_target"
                android:text="@string/open_console_for_token" />

            <EditText
                android:id="@+id/onlineState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_2"
                android:layout_marginStart="@dimen/space_2"
                android:background="@null"
                android:focusable="false"
                android:minHeight="@dimen/touch_target"
                android:text="@string/status_not_running"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/space_4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/openp2pLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:background="@color/log_surface"
            android:focusable="false"
            android:fontFamily="monospace"
            android:inputType="none"
            android:minHeight="240dp"
            android:padding="@dimen/space_3"
            android:textIsSelectable="true" />
    </LinearLayout>
</ScrollView>
